force-app/main/default/objects/MDU_Chuzo__c/MDU_Chuzo__c.object-meta.xml
<CustomObject>
    <label>MDU Chuzo</label>
    <nameField>
        <label>MDU Chuzo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDUs Chuzo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>