force-app/main/default/objects/MDU_Chuzo__c/fields/DIRECTV_Dealer_Code_FFL__c.field-meta.xml
<CustomField>
    <fullName>DIRECTV_Dealer_Code_FFL__c</fullName>
    <label>DIRECTV Dealer Code FFL</label>
    <length>15</length>
    <type>Text</type>
</CustomField>