force-app/main/default/objects/MDU_Chuzo__c/fields/Frontier_PID__c.field-meta.xml
<CustomField>
    <fullName>Frontier_PID__c</fullName>
    <label>Frontier PID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>