force-app/main/default/objects/MDU_Chuzo__c/fields/Frontier_UserID__c.field-meta.xml
<CustomField>
    <fullName>Frontier_UserID__c</fullName>
    <label>Frontier UserID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>