force-app/main/default/objects/MDU_Chuzo__c/fields/MDU_Number__c.field-meta.xml
<CustomField>
    <fullName>MDU_Number__c</fullName>
    <label>MDU Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>