force-app/main/default/objects/MDU_Chuzo__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>If(End_Date__c &lt; TODAY(), &apos;Inactive&apos;, &apos;Active&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>