force-app/main/default/objects/MDU_Chuzo__c/validationRules/End_Date_Cannot_Be_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Cannot_Be_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Start_Date__c ), NOT(ISBLANK( End_Date__c )))</errorConditionFormula>
    <errorMessage>An End Date can&apos;t be set if the MDU doesn&apos;t have a Start Date.</errorMessage>
</ValidationRule>