force-app/main/default/objects/MDU_Chuzo__c/validationRules/Fronter_Information_Not_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Fronter_Information_Not_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(NOT(ISBLANK( Frontier_UserID__c )),ISBLANK( Frontier_PID__c )),AND(NOT(ISBLANK( Frontier_PID__c )),ISBLANK( Frontier_UserID__c )))</errorConditionFormula>
    <errorMessage>Frontier UserID is required to set Frontier PID and vice-versa.</errorMessage>
</ValidationRule>